syntax = "proto3";

package ptera.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jyogi-web/2025_Ptera/backend/pkg/grpc/ptera/v1;ptera";

service PteraService {}

message User {
  string id = 1;
  string name = 2;
  string icon_url = 3;
  optional string email = 4;
}

message Card {
  string id = 1;
  string creator_id = 2;
  string name = 3;
  int32 grade = 4;
  string position = 5;
  optional string affiliated_group = 6;
  string hobby = 7;
  string description = 8;
  string image_url = 9;
  google.protobuf.Timestamp created_at = 10;
}
